# fishometry

./: .gitignore  README.md  create-data.sh  pyproject.toml  run_all.sh  run_predictions.sh
configs/: TODO.md  config_inside.yaml  config_inside_zoom.yaml  config_outside.yaml  data-inside-zoom.json  data-inside-zoom.yaml  data-inside.json  data-inside.yaml  data-outside.json  data-outside.yaml
motebooks/: exploring.py  threshold_classification.py
notebooks/: cnn.ipynb  regression.ipynb
scripts/: create-data.sh  depth.py  main.py  main_pro.py  manual_verify_depth.py  manual_verify_zoom_real.py  preprocess_yolo_input.py  rotate.py  rotate.py.bak  select_images_for_yolo_gradio.py  select_images_for_yolo_predict_gradio.py  select_images_for_yolo_train_gradio.py  visualize_outputs_gradio.py  yolo.py
src/: __init__.py  analyze_results.py  app.py  config.py  create_dataset.py  pipeline.py  raw_data_explorer.py  regression.py  run_pipelines.py  train_baseline.py  train_cnn.py  train_mlp.py  train_per_fishtype.py  train_regression.py  train_xgboost.py
src/create_data/: augment.py  run.py  split.py
src/create_data/steps/: augment.py  base.py  split.py
src/data-creation/: __init__.py  augment.py  split.py
src/preprocessing/: __init__.py  run.py
src/preprocessing/steps/: __init__.py  base.py  blackout.py  depth.py  feature.py  rotate.py  segment.py  split.py  utils.py  visualize.py  vlm.py  yolo.py
src/steps/: base_step.py  blackout_step.py  depth_step.py  feature_step.py  rotate_step.py  segment_step.py  visualize_step.py  yolo_step.py
src/training/: __init__.py  baseline.py  cnn.py  data_loader.py  linear.py  mlp.py  per_fishtype.py  regression.py  run.py  run_outside.py  xgboost.py
src/training/models/: __init__.py  baseline.py  cnn.py  linear.py  (+1 more)
src/utils/: io.py  zoom.py
src/visualization/: __init__.py  app.py  app_fish_type.py  data_loading.py  image_processing.py
tests/: verify_depth.py  verify_zoom_real.py
(+6 files in other folders)
