[project]
name = "fishometry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=6.0.0",
    "jupyter>=1.1.1",
    "polars>=1.39.3",
    "pydantic>=2.12.5",
    "scikit-learn>=1.7.2",
    "segment-anything",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "typer>=0.24.1",
    "ultralytics>=8.4.35",
    "xgboost>=3.2.0",
]

[tool.uv.sources]
segment-anything = { git = "https://github.com/facebookresearch/segment-anything.git" }
